<resources>
    <string name="app_name">Timco</string>
    <string name="tituloUno">SISTEMA DE INIVENTARIOS</string>
    <string name="tituloDos">TIMCO S.A.S.</string>
    <string name="botonCero">Inicio</string>
    <string name="botonUno">Módulos</string>
    <string name="botonDos">Contacto</string>
    <string name="botonTres">PQRSF</string>
    <string name="pieUno">Transporte, Ingenieria y Maquinaria de Colombia S.A.S.</string>
    <string name="pieDos">Contacto</string>
    <string name="pieTres">timcosas@gmail.com</string>
    <string name="pieCuatro">3142221847</string>
    <string name="pieCinco">Bogotá D.C.</string>
    <string name="pieSeis">lun - Vie 08:00am a 5:00pm</string>
    <string name="modulos">MÓDULOS</string>
    <string name="mUno">Gestión de usuarios</string>
    <string name="mDos">Información de los trabajadores</string>
    <string name="mTres">Información de los productos</string>
    <string name="mCuatro">Solicitar productos</string>
    <string name="mCinco">Asignar un producto</string>
    <string name="mSeis">Gestionar reportes o informes</string>
    <string name="contacto">CONTACTO</string>
    <string name="txtUno">Muchas gracias por su interés, si tiene alguna pregunta.¡Escribanos un mensaje ahora!</string>
    <string name="enviar">Enviar</string>
    <string name="txtDos">La persona encargada se comunicará con usted de acuerdo con los datos diligenciados en este formulario. </string>

</resources>