<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DosActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#FF9800"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="#86FF9700"
            android:gravity="center"
            android:text="@string/tituloUno"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="#87FF9700"
            android:gravity="center"
            android:text="@string/tituloDos"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="411dp"
        android:layout_height="72dp"
        android:background="#FFFFFF"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botonCero"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/botonUno"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/botonDos"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/botonTres"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </TableRow>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="417dp"
        android:layout_height="376dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/modulos"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginBottom="10sp"/>

        <Button
            android:id="@+id/button5"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:text="@string/mUno"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:cornerRadius="0dp"
            app:strokeColor="@color/black" />

        <Button
            android:id="@+id/button7"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:text="@string/mDos"
            android:layout_marginBottom="5sp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:cornerRadius="0dp"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/black"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:text="@string/mTres"
            android:layout_marginBottom="5sp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:cornerRadius="0dp"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/black"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:text="@string/mCuatro"
            android:layout_marginBottom="5sp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:cornerRadius="0dp"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/black"/>

        <Button
            android:id="@+id/button10"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:text="@string/mCinco"
            android:layout_marginBottom="5sp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:cornerRadius="0dp"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/black"/>

        <Button
            android:id="@+id/button11"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:text="@string/mSeis"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:cornerRadius="0dp"
            style="?attr/materialButtonOutlinedStyle"
            app:strokeColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="158dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/pieUno"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/youtube" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/gmail" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/maps" />

            <LinearLayout
                android:layout_width="192dp"
                android:layout_height="123dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieDos"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieTres"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieCuatro"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieCinco"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieSeis"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>