<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".TresActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="429dp"
        android:layout_height="118dp"
        android:background="#FF9800"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="#86FF9700"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/tituloUno"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="#87FF9700"
            android:gravity="center"
            android:text="@string/tituloDos"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button4"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/botonCero"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:cornerRadius="0dp"
                app:strokeColor="@color/black" />

            <Button
                android:id="@+id/button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/botonUno"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:cornerRadius="0dp"
                app:strokeColor="@color/black" />

            <Button
                android:id="@+id/button2"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/botonDos"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:cornerRadius="0dp"
                app:strokeColor="@color/black" />

            <Button
                android:id="@+id/button3"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/botonTres"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:cornerRadius="0dp"
                app:strokeColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="429dp"
        android:layout_height="455dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:gravity="center"
            android:text="@string/contacto"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/txtUno"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="30"
            android:gravity="center"
            android:hint="Nombre"
            android:inputType="text"
            android:minHeight="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="30"
            android:gravity="center"
            android:hint="Correo electrónico"
            android:inputType="textEmailAddress"
            android:minHeight="10dp"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/editTextAsunto"
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="30"
            android:gravity="center"
            android:hint="Asunto"
            android:inputType="text"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editTextMultiline"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:hint="Mensaje"
            android:inputType="textMultiLine"
            android:lines="3" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/txtDos"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/button11"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5sp"
            android:text="@string/enviar"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="normal"
            app:cornerRadius="0dp"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="424dp"
        android:layout_height="167dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/pieUno"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/youtube" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/gmail" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/maps" />

            <LinearLayout
                android:layout_width="192dp"
                android:layout_height="123dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieDos"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieTres"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieCuatro"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieCinco"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pieSeis"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>